# qrazy

./: .gitignore  Cargo.toml  build.sh  flake.nix  index.html  qrazy.wasm  qrazy_wasm.wasm  rust-toolchain.toml
.github/workflows/: ci.yaml  pages.yaml
cli/: Cargo.toml
cli/src/: main.rs
example-site/: index.html
qr_gen/: Cargo.toml
qr_gen/src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
