[workspace]
members = ["cli", "qr_gen", "wasm"]

[profile.release.package.qrazy_wasm]
# Optimize wasm bundle for size
# - https://doc.rust-lang.org/cargo/reference/profiles.html
# - https://rustwasm.github.io/docs/book/reference/code-size.html
inherits = "release"
opt-level = "s"
strip = "debuginfo"
